--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clyde & Conrad Honey Co. | Pure Artisan Raw Honey from Adderbury</title>
-    <meta name="description" content="Small-batch, raw, and unfiltered honey from Perry Tree Farm, Adderbury. Experience the untainted sweetness of North Oxfordshire wildflowers.">
+    <meta name="description" content="Small-batch, raw, and unfiltered honey from Adderbury. Experience the untainted sweetness of North Oxfordshire wildflowers.">
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Playfair+Display:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
 
@@ -148,7 +148,7 @@
         <a href="#about" class="nav-button">Our Story</a>
         <a href="#why-natural" class="nav-button">Why Raw?</a>
         <a href="#products" class="nav-button">The Collection</a>
-        <a href="#find-us" class="nav-button">Visit Us</a>
+        <a href="#find-us" class="nav-button">Buy Honey</a>
     </nav>
 </header>
 
@@ -162,12 +162,12 @@
 </section>
 
 <section class="about" id="about">
-    <h2>The Spirit of Perry Tree Farm</h2>
+    <h2>The Spirit of Clyde & Conrad</h2>
     <p>
-        At Clyde & Conrad Honey Co., we believe that truly exceptional honey is a collaboration between the beekeeper and the natural world. Our journey began at <strong>Perry Tree Farm</strong>, where the rolling landscapes of Adderbury provide a sanctuary for our bees. Here, amongst the seasonal bloom of hawthorn, horse chestnut, and summer wildflowers, our colonies forage in peace, far from the reach of industrial agriculture.
+        At Clyde & Conrad Honey Co., we believe that truly exceptional honey is a collaboration between the beekeeper and the natural world. Our journey is centered in the heart of Adderbury, where the rolling landscapes provide a lush sanctuary for our bees.
     </p>
     <p>
-        We reject the fast-paced nature of modern food production. Instead, we embrace a "slow honey" philosophy—taking only what the bees can spare and bottling it by hand in tiny, precious batches. This artisanal approach ensures that the unique "terroir" of Adderbury is captured in every single jar we produce.
+        We reject the fast-paced nature of modern food production. Instead, we embrace a "slow honey" philosophy—taking only what the bees can spare and bottling it by hand in tiny, precious batches. This artisanal approach ensures that the unique "terroir" of the local Oxfordshire countryside is captured in every single jar we produce.
     </p>
 </section>
 
@@ -183,15 +183,13 @@
 
 <section class="products" id="products">
     <h2>The Seasonal Harvest</h2>
-    <p>Our collection represents the changing colors and scents of the Oxfordshire seasons. Because our honey is raw, its texture is a living thing—changing from silky liquid to a luxurious spreadable crystal over time.</p>
-    
     <div class="product-grid">
         <div class="product-card">
             <img src="https://images.unsplash.com/photo-1555035386-35366c89122c?auto=format&fit=crop&q=80&w=800" alt="Crystalised Clover Honey">
             <div class="product-info">
                 <h3>Crystalised Clover Honey</h3>
                 <p>
-                    A pale, elegant honey harvested during the peak of the spring bloom. It possesses a delicate, creamy texture that melts on the tongue, revealing subtle hints of vanilla and sweet meadow grass. Its natural crystal structure makes it the perfect, mess-free companion for hot buttered sourdough or morning porridge.
+                    A pale, elegant honey harvested during the peak of the spring bloom. It possesses a delicate, creamy texture that melts on the tongue, revealing subtle hints of vanilla and sweet meadow grass. Its natural crystal structure makes it the perfect, mess-free companion for hot buttered sourdough.
                 </p>
                 <span class="price">£5.00 <small>(Standard Jar)</small></span>
             </div>
@@ -202,7 +200,7 @@
             <div class="product-info">
                 <h3>Soft Wildflower Honey</h3>
                 <p>
-                    A bold and complex multi-floral blend that captures the heat and vibrancy of the high summer. With a deep amber glow and a robust aromatic profile, this honey offers layers of bramble, woodland blossoms, and sun-drenched nectar. It is a heavier, more traditional honey, ideal for glazing, cooking, or enjoying by the spoonful.
+                    A bold and complex multi-floral blend that captures the heat and vibrancy of the high summer. With a rich amber glow and a robust aromatic profile, this honey offers deep notes of bramble and woodland blossoms. It is a heavier, more traditional honey, ideal for glazing or enjoying by the spoonful.
                 </p>
                 <span class="price">£10.00 <small>(Larger Jar)</small></span>
             </div>
@@ -211,16 +209,16 @@
 </section>
 
 <section class="find-us" id="find-us">
-    <h2>Where to Find Our Hives</h2>
+    <h2>Where can you buy our honey?</h2>
     <p>
-        We believe in transparency and the beauty of local food. You are welcome to visit our home base to collect your honey directly from the source. Experience the fresh air and quietude where your honey was made.
+        Our honey is produced sustainably just a few hundred meters away from our collection point. You are welcome to visit us to pick up a jar of our latest harvest directly:
     </p>
     <p>
         <strong style="font-size: 1.5rem; color: #4b2c00;">Perry Tree Farm</strong><br>
         Adderbury, Oxfordshire
     </p>
     
-    <a href="https://www.google.com/maps/search/Perry+Tree+Farm+Adderbury" target="_blank" class="map-button">Get Directions to the Farm</a>
+    <a href="https://www.google.com/maps/search/Perry+Tree+Farm+Adderbury" target="_blank" class="map-button">Get Directions to Perry Tree Farm</a>
 
     <p style="margin-top: 4rem;">
         For wholesale orders, special requests, or to check current stock levels, please reach out to us:
