--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
             align-items: center;
             text-align: center;
             padding: 0 2rem;
+            /* UPDATED BACKGROUND IMAGE */
             background-image: 
-                linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)), 
-                url("https://images.unsplash.com/photo-1558642452-9d2a7deb7f62?auto=format&fit=crop&q=80&w=1920");
+                linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
+                url("IMG_0132.jpeg");
             background-size: cover;
-            background-position: center;
+            background-position: center 20%; /* Adjusted to frame the subjects better */
             background-attachment: fixed;
         }
         .hero-content { max-width: 950px; }
@@ -185,7 +186,7 @@
     <h2>The Seasonal Harvest</h2>
     <div class="product-grid">
         <div class="product-card">
-            <img src="https://images.unsplash.com/photo-1555035386-35366c89122c?auto=format&fit=crop&q=80&w=800" alt="Crystalised Clover Honey">
+            <img src="IMG_0132.jpeg" alt="Crystalised Clover Honey">
             <div class="product-info">
                 <h3>Crystalised Clover Honey</h3>
                 <p>
@@ -218,7 +219,7 @@
         Adderbury, Oxfordshire
     </p>
     
-    <a href="https://www.google.com/maps/search/Perry+Tree+Farm+Adderbury" target="_blank" class="map-button">Get Directions to Perry Tree Farm</a>
+    <a href="https://maps.google.com" target="_blank" class="map-button">Get Directions to Perry Tree Farm</a>
 
     <p style="margin-top: 4rem;">
         For wholesale orders, special requests, or to check current stock levels, please reach out to us:
