--- a/index.html
+++ b/index.html
@@ -49,15 +49,19 @@
             align-items: center;
             text-align: center;
             padding: 0 2rem;
-            /* UPDATED BACKGROUND IMAGE */
+
+            /* UPDATED HERO BACKGROUND */
             background-image: 
-                linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-                url("IMG_0132.jpeg");
+                linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
+                url("honey-1958464_1280.jpg");
+
             background-size: cover;
-            background-position: center 20%; /* Adjusted to frame the subjects better */
-            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
         }
+
         .hero-content { max-width: 950px; }
+
         .hero h2 { 
             font-family: 'Playfair Display', serif;
             font-size: 4.5rem; 
@@ -67,6 +71,7 @@
             text-shadow: 3px 6px 15px rgba(0,0,0,0.5);
             line-height: 1.1;
         }
+
         .hero p { 
             font-size: 1.5rem; 
             color: #fdfdfd; 
@@ -113,7 +118,7 @@
         .find-us { background-color: #fdfaf0; border-top: 1px solid #f6d365; }
         .contact-email { font-weight: 700; color: #4b2c00; font-size: 1.4rem; display: inline-block; margin-top: 1rem; border-bottom: 2px solid #f6d365; transition: 0.3s; }
         .contact-email:hover { color: #8a5a00; border-bottom-color: #4b2c00; }
-        
+
         .map-button {
             display: inline-block;
             margin-top: 2.5rem;
@@ -155,7 +160,7 @@
 
 <section class="hero">
     <div class="hero-content">
-        <h2>Unfiltered, Unheated, Unrivaled</h2>
+        <h2>Clyde & Conrad Honey Co.</h2>
         <p>
             Experience the liquid gold of North Oxfordshire. Sustainably gathered from the historic meadows and ancient hedgerows of Adderbury.
         </p>
@@ -165,69 +170,26 @@
 <section class="about" id="about">
     <h2>The Spirit of Clyde & Conrad</h2>
     <p>
-        At Clyde & Conrad Honey Co., we believe that truly exceptional honey is a collaboration between the beekeeper and the natural world. Our journey is centered in the heart of Adderbury, where the rolling landscapes provide a lush sanctuary for our bees.
-    </p>
-    <p>
-        We reject the fast-paced nature of modern food production. Instead, we embrace a "slow honey" philosophy—taking only what the bees can spare and bottling it by hand in tiny, precious batches. This artisanal approach ensures that the unique "terroir" of the local Oxfordshire countryside is captured in every single jar we produce.
+        At Clyde & Conrad Honey Co., we believe that truly exceptional honey is a collaboration between the beekeeper and the natural world.
     </p>
 </section>
 
 <section class="why-natural" id="why-natural">
     <h2>Why We Choose Raw & Unprocessed</h2>
     <p>
-        Most commercial honey is a shadow of its true self. To keep it liquid forever, it is pasteurized at high heat and ultra-filtered, a process that strips away the very things that make honey a miracle: the live enzymes, the delicate aromatic oils, and the beneficial local pollen.
-    </p>
-    <p>
-        Our honey is <strong>Raw</strong>. This means it never leaves the temperature of the hive. By keeping it raw, we preserve its complex medicinal properties, its rich antioxidants, and its incredible depth of flavor. When you taste our honey, you are tasting the exact nectar the bees gathered—untouched, untainted, and brimming with the vitality of the British countryside.
+        Our honey is raw, unheated, and unfiltered — exactly as the bees intended.
     </p>
 </section>
 
 <section class="products" id="products">
     <h2>The Seasonal Harvest</h2>
-    <div class="product-grid">
-        <div class="product-card">
-            <img src="IMG_0132.jpeg" alt="Crystalised Clover Honey">
-            <div class="product-info">
-                <h3>Crystalised Clover Honey</h3>
-                <p>
-                    A pale, elegant honey harvested during the peak of the spring bloom. It possesses a delicate, creamy texture that melts on the tongue, revealing subtle hints of vanilla and sweet meadow grass. Its natural crystal structure makes it the perfect, mess-free companion for hot buttered sourdough.
-                </p>
-                <span class="price">£5.00 <small>(Standard Jar)</small></span>
-            </div>
-        </div>
-
-        <div class="product-card">
-            <img src="https://images.unsplash.com/photo-1471943311424-646960669fbc?auto=format&fit=crop&q=80&w=800" alt="Soft Wildflower Honey">
-            <div class="product-info">
-                <h3>Soft Wildflower Honey</h3>
-                <p>
-                    A bold and complex multi-floral blend that captures the heat and vibrancy of the high summer. With a rich amber glow and a robust aromatic profile, this honey offers deep notes of bramble and woodland blossoms. It is a heavier, more traditional honey, ideal for glazing or enjoying by the spoonful.
-                </p>
-                <span class="price">£10.00 <small>(Larger Jar)</small></span>
-            </div>
-        </div>
-    </div>
 </section>
 
 <section class="find-us" id="find-us">
     <h2>Where can you buy our honey?</h2>
-    <p>
-        Our honey is produced sustainably just a few hundred meters away from our collection point. You are welcome to visit us to pick up a jar of our latest harvest directly:
-    </p>
-    <p>
-        <strong style="font-size: 1.5rem; color: #4b2c00;">Perry Tree Farm</strong><br>
-        Adderbury, Oxfordshire
-    </p>
-    
-    <a href="https://maps.google.com" target="_blank" class="map-button">Get Directions to Perry Tree Farm</a>
-
-    <p style="margin-top: 4rem;">
-        For wholesale orders, special requests, or to check current stock levels, please reach out to us:
-    </p>
-    <a href="mailto:unwaterprooftebags@gmail.com" class="contact-email">unwaterprooftebags@gmail.com</a>
 </section>
 
-<footer id="contact">
+<footer>
     <p>Grown with Respect | Harvested with Care | Bottled by Hand</p>
     <p style="margin-top: 15px; font-weight: 600;">Adderbury, Oxfordshire • © 2025 Clyde & Conrad Honey Co.</p>
 </footer>
