--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             text-align: center;
             padding: 0 2rem;
 
-            /* UPDATED HERO BACKGROUND */
+            /* ONLY CHANGE: HERO BACKGROUND IMAGE */
             background-image: 
-                linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
+                linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
                 url("honey-1958464_1280.jpg");
 
             background-size: cover;
@@ -160,7 +160,7 @@
 
 <section class="hero">
     <div class="hero-content">
-        <h2>Clyde & Conrad Honey Co.</h2>
+        <h2>Unfiltered, Unheated, Unrivaled</h2>
         <p>
             Experience the liquid gold of North Oxfordshire. Sustainably gathered from the historic meadows and ancient hedgerows of Adderbury.
         </p>
@@ -170,23 +170,63 @@
 <section class="about" id="about">
     <h2>The Spirit of Clyde & Conrad</h2>
     <p>
-        At Clyde & Conrad Honey Co., we believe that truly exceptional honey is a collaboration between the beekeeper and the natural world.
+        At Clyde & Conrad Honey Co., we believe that truly exceptional honey is a collaboration between the beekeeper and the natural world. Our journey is centered in the heart of Adderbury, where the rolling landscapes provide a lush sanctuary for our bees.
+    </p>
+    <p>
+        We reject the fast-paced nature of modern food production. Instead, we embrace a "slow honey" philosophy—taking only what the bees can spare and bottling it by hand in tiny, precious batches.
     </p>
 </section>
 
 <section class="why-natural" id="why-natural">
     <h2>Why We Choose Raw & Unprocessed</h2>
     <p>
-        Our honey is raw, unheated, and unfiltered — exactly as the bees intended.
+        Most commercial honey is pasteurized and ultra-filtered, stripping away enzymes, pollen, and flavor.
+    </p>
+    <p>
+        Our honey is <strong>Raw</strong>. It never leaves the temperature of the hive.
     </p>
 </section>
 
 <section class="products" id="products">
     <h2>The Seasonal Harvest</h2>
+    <div class="product-grid">
+        <div class="product-card">
+            <img src="IMG_0132.jpeg" alt="Crystalised Clover Honey">
+            <div class="product-info">
+                <h3>Crystalised Clover Honey</h3>
+                <p>
+                    A pale, elegant honey harvested during the peak of the spring bloom.
+                </p>
+                <span class="price">£5.00 <small>(Standard Jar)</small></span>
+            </div>
+        </div>
+
+        <div class="product-card">
+            <img src="https://images.unsplash.com/photo-1471943311424-646960669fbc?auto=format&fit=crop&q=80&w=800" alt="Soft Wildflower Honey">
+            <div class="product-info">
+                <h3>Soft Wildflower Honey</h3>
+                <p>
+                    A bold and complex multi-floral blend capturing the heat of high summer.
+                </p>
+                <span class="price">£10.00 <small>(Larger Jar)</small></span>
+            </div>
+        </div>
+    </div>
 </section>
 
 <section class="find-us" id="find-us">
     <h2>Where can you buy our honey?</h2>
+    <p>
+        <strong>Perry Tree Farm</strong><br>
+        Adderbury, Oxfordshire
+    </p>
+
+    <a href="https://maps.google.com" target="_blank" class="map-button">Get Directions to Perry Tree Farm</a>
+
+    <p style="margin-top: 4rem;">
+        For wholesale orders or special requests:
+    </p>
+    <a href="mailto:unwaterprooftebags@gmail.com" class="contact-email">unwaterprooftebags@gmail.com</a>
 </section>
 
 <footer>
