--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <p>
             Every golden drop of Clyde & Conrad honey is produced right here in our corner of the world. We believe in the beauty of the human touch, which is why every single jar is meticulously canned and labeled by hand. This artisanal approach ensures that when you open a jar, you are experiencing the pure, untamed essence of the hive, delivered with the care only a small-scale, family-run harvest can provide.
         </p>
-    </div>
+        <img src="IMG_0132.jpeg" >    </div>
 </section>
 
 <section class="why-natural" id="why-natural">
