--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             <div class="product-card">
                 <div class="image-frame">
                     <div class="image-viewport clover-viewport">
-                        <img src="https://images.unsplash.com/photo-1558642452-9d2a7deb7f62?auto=format&fit=crop&q=80&w=800" alt="Crystalised Clover Honey">
+                        <img src="clydenadconrad.jpeg">
                     </div>
                 </div>
                 <div class="product-info">
