--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <div class="product-card">
                 <div class="image-frame">
                     <div class="image-viewport wildflower-viewport">
-                        <img src="https://images.unsplash.com/photo-1471943311424-646960669fbc?auto=format&fit=crop&q=80&w=800" alt="Soft Wildflower Honey">
+                        <img src="https://github.com/unwaterprooftebags-ui/Theactualconradclydehoney/blob/main/clydenadconrad.jpeg">
                     </div>
                 </div>
                 <div class="product-info">
