--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             <div class="product-card">
                 <div class="image-frame">
                     <div class="image-viewport clover-viewport">
-                        <img src="clydenadconrad.jpeg">
+                        <img src="honeyclover.jpeg">
                     </div>
                 </div>
                 <div class="product-info">
@@ -333,7 +333,7 @@
             <div class="product-card">
                 <div class="image-frame">
                     <div class="image-viewport wildflower-viewport">
-                        <img src="https://github.com/unwaterprooftebags-ui/Theactualconradclydehoney/blob/main/clydenadconrad.jpeg">
+                        <img src="honeywildflower.jpeg">
                     </div>
                 </div>
                 <div class="product-info">
